updated components page with typographical defaults

--- a/components/index.html
+++ b/components/index.html
@@ -5,10 +5,24 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Components | Nintendo</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-        <link href="css/normalize.css" rel="stylesheet" />
-        <link href="css/main.css" rel="stylesheet" />
+        <link href="../css/normalize.css" rel="stylesheet" />
+        <link href="../css/main.css" rel="stylesheet" />
+        <link rel="stylesheet" href="https://use.typekit.net/xnj1naz.css">
     </head>
     <body>
-        <h1>Web components go here</h1>
+        <h1>Web Components</h1>
+
+        <h2>Typography Defaults</h2>
+
+        <article class="component">
+            <h3 class="component__name">body</h3>
+            <img src="img/body-copy.png" srcset="img/body-copy.png 2x">
+
+            <div class="component__code">
+                <h4>Mario Kart World Direct revs up new details on the biggest Mario Kart ever, coming to Nintendo Switch 2 at launch</h4>
+                <p>Roll Out With Mario and Friends Across an Interconnected World Featuring Up to 24 Drivers in Grand Prix Races, Chaotic Knockout Tours, Battle Mode...</p>                
+                <a href="!#">Read more</a>
+            </div>
+        </article>
     </body>
 </html>
