--- a/components/index.html
+++ b/components/index.html
@@ -16,13 +16,29 @@
 
         <article class="component">
             <h3 class="component__name">body</h3>
-            <img src="img/body-copy.png" srcset="img/body-copy.png 2x">
-
+            <div class="component__img">
+                <img src="img/body-copy.png" srcset="img/body-copy.png 2x" alt="body copy">
+            </div>    
             <div class="component__code">
                 <h4>Mario Kart World Direct revs up new details on the biggest Mario Kart ever, coming to Nintendo Switch 2 at launch</h4>
                 <p>Roll Out With Mario and Friends Across an Interconnected World Featuring Up to 24 Drivers in Grand Prix Races, Chaotic Knockout Tours, Battle Mode...</p>                
                 <a href="!#">Read more</a>
             </div>
         </article>
+
+        <article class="component">
+            <h3 class="component__name">headings (h1, h2, ...) </h3>
+            <div class="component__img">
+                <img src="img/h2.png" srcset="img/h2.png 2x" alt="h2">
+                <img src="img/h3.png" srcset="img/h3.png 2x" alt="h3">
+                <img src="img/h4.png" srcset="img/h4.png 2x" alt="h4">  
+            </div>
+            <div class="component__code">
+                <h2>Featured</h2>
+                <h3>Shop games, exclusive Nintendo merchandise, and more! Plus, get free shipping on orders $50 and over.</h3>                
+                <h4>Celebrate Fire Emblem with My Nintendo digital rewards and with Fire Emblem Heroes in-game events</h4>
+            </div>
+        </article>
+
     </body>
 </html>
