adding button images and code

--- a/components/index.html
+++ b/components/index.html
@@ -22,7 +22,7 @@
             <div class="component__code">
                 <h4>Mario Kart World Direct revs up new details on the biggest Mario Kart ever, coming to Nintendo Switch 2 at launch</h4>
                 <p>Roll Out With Mario and Friends Across an Interconnected World Featuring Up to 24 Drivers in Grand Prix Races, Chaotic Knockout Tours, Battle Mode...</p>                
-                <a href="!#">Read more</a>
+                <a href="#!">Read more</a>
             </div>
         </article>
 
@@ -37,6 +37,24 @@
                 <h2>Featured</h2>
                 <h3>Shop games, exclusive Nintendo merchandise, and more! Plus, get free shipping on orders $50 and over.</h3>                
                 <h4>Celebrate Fire Emblem with My Nintendo digital rewards and with Fire Emblem Heroes in-game events</h4>
+            </div>
+        </article>
+
+        <article class="component">
+            <h3 class="component__name">buttons</h3>
+            <div class="component__img-button">
+                <img src="img/button_01.png" srcset="img/button_01.png 2x" alt="button 01">
+                <img src="img/button_02.png" srcset="img/button_02.png 2x" alt="button 02">
+                <img src="img/button_03.png" srcset="img/button_03.png 2x" alt="button 03">
+                <img src="img/button_04.png" srcset="img/button_04.png 2x" alt="button 04">
+                <img src="img/button_05.png" srcset="img/button_05.png 2x" alt="button 05">
+            </div>
+            <div class="component__code">
+                <a href="#!" class="button button--clear">Log in / Sign up</a>
+                <a href="#!" class="button button--large">Learn more</a>
+                <a href="#!" class="button">Shop now</a>
+                <a href="#!" class="button button--blue">Learn more</a>
+                <a href="#!" class="button button--icon"><i class="fa-solid fa-heart"></i></a>
             </div>
         </article>
 
