adding link images and code

--- a/components/index.html
+++ b/components/index.html
@@ -22,7 +22,7 @@
             <div class="component__code">
                 <h4>Mario Kart World Direct revs up new details on the biggest Mario Kart ever, coming to Nintendo Switch 2 at launch</h4>
                 <p>Roll Out With Mario and Friends Across an Interconnected World Featuring Up to 24 Drivers in Grand Prix Races, Chaotic Knockout Tours, Battle Mode...</p>                
-                <a href="#!">Read more</a>
+                <a href="#!"><p>Read more</p></a>
             </div>
         </article>
 
@@ -57,6 +57,41 @@
                 <a href="#!" class="button button--icon"><i class="fa-solid fa-heart"></i></a>
             </div>
         </article>
+
+        <article class="component">
+            <h3 class="component__name">links: default and hover states</h3>
+            <div class="component__img">
+                <img src="img/links_01.png" srcset="img/links_01.png 2x" alt="links 01">
+            </div>
+            <div class="component__code">
+                <a href="#!">
+                    <h4>Mario Kart World Direct revs up new details on the biggest Mario Kart ever, coming to Nintendo...</h4>
+                    <p>Read more</p>
+                </a>
+                <a href="#!">
+                    <h4>Partner Spotlight Sale: Save up to 50% on select digital games</h4>
+                    <p>Read more</p>
+                </a>
+            </div>
+            <div class="component__img">
+                <img src="img/links_02.png" srcset="img/links_02.png 2.5x" alt="links 02">
+            </div>
+            <footer>
+                <a href="#!"><h4>About Nintendo</h4></a>
+                <a href="#!"><h4>Shop</h4></a>
+
+            </footer>
+            <div class="component__img-button">
+                <img src="img/button_link.png" srcset="img/button_link.png 2x" alt="button link">
+                <img src="img/button_link_hover.png" srcset="img/button_link_hover.png 2x" alt="button link hover">
+            </div>
+            <section>
+                <a href="#!" class="button button--large">Start shopping</a>
+                <a href="#!" class="button button--large">See all news articles</a>
+            </section>
+        </article>
+
+
 
     </body>
 </html>
