adding product/news cards and sections

--- a/components/index.html
+++ b/components/index.html
@@ -26,6 +26,8 @@
             </div>
         </article>
 
+        <hr>
+
         <article class="component">
             <h3 class="component__name">headings (h1, h2, ...) </h3>
             <div class="component__img">
@@ -39,6 +41,8 @@
                 <h4>Celebrate Fire Emblem with My Nintendo digital rewards and with Fire Emblem Heroes in-game events</h4>
             </div>
         </article>
+
+        <hr>
 
         <article class="component">
             <h3 class="component__name">buttons</h3>
@@ -58,6 +62,8 @@
             </div>
         </article>
 
+        <hr>
+
         <article class="component">
             <h3 class="component__name">links: default and hover states</h3>
             <div class="component__img">
@@ -76,22 +82,73 @@
             <div class="component__img">
                 <img src="img/links_02.png" srcset="img/links_02.png 2.5x" alt="links 02">
             </div>
+        
             <footer>
                 <a href="#!"><h4>About Nintendo</h4></a>
                 <a href="#!"><h4>Shop</h4></a>
-
             </footer>
+
             <div class="component__img-button">
                 <img src="img/button_link.png" srcset="img/button_link.png 2x" alt="button link">
                 <img src="img/button_link_hover.png" srcset="img/button_link_hover.png 2x" alt="button link hover">
             </div>
+
             <section>
                 <a href="#!" class="button button--large">Start shopping</a>
                 <a href="#!" class="button button--large">See all news articles</a>
             </section>
         </article>
 
+        <hr>
 
+        <h3 class="component__name">product/news cards</h3>
+
+        <div class="carousel">
+        <article class="card">
+            <a href="#!">
+            <div class="zoom-img">
+            <img src="img/spotlight_sale.avif" alt="spotlight sale">
+            </div>
+            <h4 class="">Save on select hit games. Now through 4/27 @ 11:59 p.m. PT.</h4>
+            </a>
+            <div class="card-text">
+            <p><a href="#!" class="button">Shop now</a></p>
+            <p class="card-tag">Nintendo Switch</p>
+            </div>
+        </article>
+
+        <article class="card">
+            <a href="#!">
+            <div class="zoom-img">
+            <img src="img/ns2_small.avif" alt="nintendo switch 2">
+            </div>
+            <h4 class="">Games coming to Nintendo Switch 2</h4>
+            </a>
+            <div class="card-text">
+            <p><a href="#!" class="button button--blue">Learn more</a></p>
+            </div>
+        </article>
+        </div>
+
+        <hr>
+    
+        <h3 class="component__name">sections</h3>
+        <h2>Online store</h2>
+        <div class="section">
+        <div class="banner">
+        <img src="img/mns_banner.png" alt="my nintendo store">
+        </div>
+        <div class="sectionheading">
+        <p>Shop games, exclusive Nintendo merchandise, and more! Plus, get free shipping on orders $50 and over.</p>
+        </div>
+        <div class="sectionbutton">
+        <a href="#!" class="button button--large">Start shopping</a>
+        </div>
+        </div>
+        <hr>
+
+        <h3 class="component__name">footer</h3>
+        
 
     </body>
 </html>
