--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ h3 {
 }
 
 h4 {
-    font-size: 1.1rem; 
+    font-size: 1rem; 
 }
 
 
@@ -130,3 +130,92 @@ footer > a:hover :is(h1,h2,h3,h4) {
 section > a:hover {
     background: var(--dark-red);
 }
+
+/* Card */
+
+.card {
+    border: 0.1rem solid var(--dark-gray-1);
+    padding: 0rem;
+    text-align: left;
+    border-radius: 1rem;
+    max-width: 17rem;
+    height: 20rem;
+    background: var(--color-white);
+    margin: 1rem 0;
+}
+
+.card h4 {
+    padding: 0 1rem;
+}
+
+
+.card-text {
+    padding: 0 1rem;
+}
+
+.card-tag {
+    border-left: 0.25rem solid var(--red);
+    padding-left: 0.5rem;
+}
+
+.card img {
+    padding: 0;
+    border: 0;
+    border-radius: 1rem 1rem 0 0;
+}
+
+
+.zoom-img {
+    overflow: hidden;
+    border-radius: 1rem 1rem 0 0;
+}
+  
+  .zoom-img img {
+    transition: all .1s ease-in-out;
+}
+  
+  .zoom-img img:hover   {
+    transform: scale(1.05);
+}
+
+.carousel {
+    display: flex;
+    gap: 2rem;
+}
+
+
+/* Section */
+
+.banner img {
+    border-radius: 1rem;
+    max-width: 100%;
+}
+
+.section {
+    display: grid;
+    gap: 1rem;
+    align-items: center;
+    grid-template-columns: repeat(1, 1fr);
+    width: 55rem;
+    max-width: 100%;
+    justify-items: center;
+}
+
+
+.banner {
+    grid-column: 1/-1;
+}
+
+@media (min-width: 1025px) {
+    .section {
+        display: grid;
+        grid-gap: 1rem;
+        grid-template-columns: 4fr 1fr;
+        padding: 0 1rem;
+        align-items: left;
+        width: 55rem;
+        max-width: 100%;
+    }
+
+    }
+
