adding footer menu

--- a/components/index.html
+++ b/components/index.html
@@ -82,12 +82,12 @@
             <div class="component__img">
                 <img src="img/links_02.png" srcset="img/links_02.png 2.5x" alt="links 02">
             </div>
-        
+        <!--
             <footer>
                 <a href="#!"><h4>About Nintendo</h4></a>
                 <a href="#!"><h4>Shop</h4></a>
             </footer>
-
+-->
             <div class="component__img-button">
                 <img src="img/button_link.png" srcset="img/button_link.png 2x" alt="button link">
                 <img src="img/button_link_hover.png" srcset="img/button_link_hover.png 2x" alt="button link hover">
@@ -148,7 +148,77 @@
         <hr>
 
         <h3 class="component__name">footer</h3>
-        
-
+        <div>Nintendo</div>
+        <footer>
+        <div class="column">
+            <ul class="footer__list">
+                <li class="footerlist__heading"><a href="#!"><h3>About Nintendo</h3></a></li>
+                <li><a href="#!">Careers</a></li>
+                <li><a href="#!">Corporate Social Responsibility</a></li>
+            </ul>
+        </div>
+        <div class="column">
+            <ul class="footer__list">
+                <li class="footer__list__heading"><a href="#!"><h3>Shop</h3></a></li>
+                <li><a href="#!">Games</a></li>
+                <li><a href="#!">Hardware</a></li>
+                <li><a href="#!">Merchandise</a></li>
+                <li><a href="#!">Sales & deals</a></li>
+                <li><a href="#!">Exclusives</a></li>
+                <li><a href="#!">Online service</a></li>
+                <li><a href="#!">Nintendo Retail Locations</a></li>
+            </ul>
+        </div>
+        <div class="column">
+            <ul class="footer__list">
+                <li class="footer__list__heading"><a href="#!"><h3>Orders</h3></a></li>
+                <li><a href="#!">Order details</a></li>
+                <li><a href="#!">Shipping info</a></li>
+                <li><a href="#!">Refunds and returns</a></li>
+                <li><a href="#!">FAQ</a></li>
+            </ul>
+        </div>
+        <div class="column">
+            <ul class="footer__list">
+                <li class="footer__list__heading"><a href="#!"><h3>Support</h3></a></li>
+                <li><a href="#!">Nintendo Switch</a></li>
+                <li><a href="#!">Nintendo Account</a></li>
+                <li><a href="#!">Other systems</a></li>
+                <li><a href="#!">Repairs</a></li>
+                <li><a href="#!">Nintendo product recycling</a></li>
+                <li><a href="#!">Warranty</a></li>
+                <li><a href="#!">Licensed prdouct information</a></li>
+            </ul>
+        </div>
+        <div class="column column--short">
+            <ul class="footer__list">
+                <li class="footer__list__heading"><a href="#!"><h3>Parents</h3></a></li>
+                <li><a href="#!">Info for parents</a></li>
+                <li><a href="#!">Parental controls</a></li>
+            </ul>
+        </div>
+        <div class="column column--short">
+            <ul class="footer__list">
+                <li class="footer__list__heading"><a href="#!"><h3>Privacy</h3></a></li>
+                <li><a href="#!">Privacy policy</a></li>
+                <li><a href="#!">Cookies and interest-based ads</a></li>
+            </ul>
+        </div>
+        <div class="column column--short">
+            <ul class="footer__list">
+                <li class="footer__list__heading"><a href="#!"><h3>Community</h3></a></li>
+                <li><a href="#!">Community guidelines</a></li>
+                <li><a href="#!">Online safety</a></li>
+            </ul>
+        </div>
+        <div class="column column--short">
+            <ul class="footer__list">
+                <li class="footer__list__heading"><a href="#!"><h3>Documents & policies</h3></a></li>
+                <li><a href="#!">Health & safety precautions</a></li>
+                <li><a href="#!">Wireless regulatory info</a></li>
+                <li><a href="#!">Supply chain transparency</a></li>
+            </ul>
+        </div>
+        </footer>
     </body>
 </html>
