--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
     --font-sans-serif: "museo-sans", sans-serif;
     --dark-gray-1: #484848;
     --light-gray-1: #f8f8f8;
+    --light-gray-2: #ececec;
     --red: #d12f25;
     --dark-red: #9c211a;
     --blue: #505dc7; 
@@ -117,13 +118,6 @@ a:hover .button--large {
     padding: 0.4rem 0.7rem;
 }
 
-/* Footer */
-
-
-footer > a:hover :is(h1,h2,h3,h4) {
-    text-decoration: underline var(--dark-red);
-    color: var(--dark-gray-1);
-}
 
 /* Section */
 
@@ -219,3 +213,50 @@ section > a:hover {
 
     }
 
+/* Footer */
+
+footer {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-column-gap: 1rem;
+    grid-row-gap: 2rem;
+}
+
+
+footer :is(h1,h2,h3,h4) {
+    color: var(--dark-gray-1);
+}
+
+footer a {
+    color: var(--red);
+}
+
+footer a:hover {
+    color: var(--dark-red);
+    text-decoration: underline var(--dark-red);
+}
+
+footer a:hover :is(h1,h2,h3,h4) {
+    text-decoration: underline var(--dark-red);
+    color: var(--dark-gray-1);
+}
+
+
+.footer__list {
+    list-style: none;
+}
+
+.footer__list__heading {
+    font-weight: 700;
+    padding-bottom: 1rem;
+}
+
+.column {
+    grid-row: span 2;
+    border-left: 2px solid var(--light-gray-2);
+}
+
+.column--short {
+    grid-row: span 1;
+    border-left: 2px solid var(--light-gray-2);
+}
