--- a/components/index.html
+++ b/components/index.html
@@ -148,8 +148,12 @@
         <hr>
 
         <h3 class="component__name">footer</h3>
-        <div>Nintendo</div>
+
         <footer>
+        <div class="brandbar">
+                <h1 class="site-name">Nintendo<sup>&reg;</sup></h1>
+        </div>
+        <div class="footer__links">
         <div class="column">
             <ul class="footer__list">
                 <li class="footerlist__heading"><a href="#!"><h3>About Nintendo</h3></a></li>
@@ -218,6 +222,34 @@
                 <li><a href="#!">Wireless regulatory info</a></li>
                 <li><a href="#!">Supply chain transparency</a></li>
             </ul>
+        </div>
+        </div>
+        <div class="socialbar">
+            <div class="socialbar__icons">
+                <li><a href="#!"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="#!"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="#!"><i class="fa-brands fa-x-twitter"></i></a></li>
+                <li><a href="#!"><i class="fa-brands fa-youtube"></i></a></li>
+            </div>
+            <div class="socialbar__privacy">
+                <img src="img/privacy-certified.webp">
+            </div>
+        </div>
+        <div class="legalbar">
+            <div class="legalbar__copyright">
+                <p>© Nintendo. Games are property of their respective owners. Nintendo of America Inc. Headquarters are in Redmond, Washington, USA</p>
+            </div>
+            <div class="legalbar__misc">
+                <li><a href="#!">Contact us</a></li>
+                <li><a href="#!">Website feedback</a></li>
+                <li><a href="#!">Terms of Use</a></li>
+            </div>
+            <div class="legalbar__lang">
+                <a href="#!">
+                    <img src="img/flag-usa.webp">
+                    English (United States)
+                </a>
+            </div>
         </div>
         </footer>
     </body>
