--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 :root {
     --font-sans-serif: "museo-sans", sans-serif;
     --dark-gray-1: #484848;
+    --dark-gray-2: #242424;
     --light-gray-1: #f8f8f8;
     --light-gray-2: #ececec;
     --red: #d12f25;
@@ -217,9 +218,6 @@ section > a:hover {
 
 footer {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-column-gap: 1rem;
-    grid-row-gap: 2rem;
 }
 
 
@@ -241,14 +239,21 @@ footer a:hover :is(h1,h2,h3,h4) {
     color: var(--dark-gray-1);
 }
 
-
-.footer__list {
+footer li {
     list-style: none;
 }
 
 .footer__list__heading {
     font-weight: 700;
     padding-bottom: 1rem;
+}
+
+.footer__links {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 1rem;
+    grid-row-gap: 2rem;
+    padding-right: 2rem;
 }
 
 .column {
@@ -258,5 +263,117 @@ footer a:hover :is(h1,h2,h3,h4) {
 
 .column--short {
     grid-row: span 1;
-    border-left: 2px solid var(--light-gray-2);
+}
+
+
+@media (min-width: 768px) {
+    .footer__links {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+
+@media (min-width: 1025px) {
+    .footer__links {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+@media (min-width: 1440px) {
+    .footer__links {
+        grid-template-columns: repeat(6, 1fr);
+    }
+}
+
+.brandbar {
+    background: var(--red);
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    grid-column: 1 / -1;
+}
+
+.site-name {
+    color: white;
+    border: 2pt solid white;
+    border-radius: 20px;
+    padding: 0.1rem 0.3rem;
+    width: 11rem;
+    text-align: center;
+}
+
+
+.socialbar {
+    grid-column: 1 / -1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 3rem;
+    padding: 2rem 1.5rem;
+}
+
+.socialbar li {
+    list-style: none;
+}
+
+.socialbar__icons {
+    font-size: 2rem;
+    display: flex;
+    gap: 2rem;
+}
+
+.socialbar__privacy img {
+    width: 4rem;
+}
+
+@media (min-width: 1025px) {
+    .socialbar {
+        flex-direction: row;
+    }
+}
+
+.legalbar {
+    grid-column: 1 / -1;
+    background: var(--dark-gray-2);
+    font-size: 0.65rem;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 2rem;
+    padding-top: 1rem;
+    padding-bottom: 5rem;
+}
+
+.legalbar img {
+    display: inline-block;
+}
+
+.legalbar a {
+    color: white;
+    font-weight: 300;
+}
+
+.legalbar__copyright {
+}
+
+.legalbar__misc {
+    display: flex;
+    gap: 1.5rem;
+    flex-basis: 1;
+}
+
+.legalbar__lang {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+@media (min-width: 1025px) {
+    .legalbar {
+        flex-direction: row;
+        font-size: 0.75rem;
+    }
 }
