--- a/components/index.html
+++ b/components/index.html
@@ -106,7 +106,7 @@
         <div class="carousel">
         <article class="card">
             <a href="#!">
-            <div class="zoom-img">
+            <div class="zoom-img zoom-img--alt">
             <img src="img/spotlight_sale.avif" alt="spotlight sale">
             </div>
             <h4 class="">Save on select hit games. Now through 4/27 @ 11:59 p.m. PT.</h4>
@@ -119,7 +119,7 @@
 
         <article class="card">
             <a href="#!">
-            <div class="zoom-img">
+            <div class="zoom-img zoom-img--alt">
             <img src="img/ns2_small.avif" alt="nintendo switch 2">
             </div>
             <h4 class="">Games coming to Nintendo Switch 2</h4>
@@ -151,7 +151,7 @@
 
         <footer>
         <div class="brandbar">
-                <h1 class="site-name">Nintendo<sup>&reg;</sup></h1>
+                <h1 class="site-name site-name--big">Nintendo<sup>&reg;</sup></h1>
         </div>
         <div class="footer__links">
         <div class="column">
